# rust-ecs

./: Cargo.toml
src/: game.rs  main.rs
src/ecs/: archetype.rs  bundles.rs  components.rs  entities.rs  generational_index.rs  helpers.rs  mod.rs  systems.rs  world.rs
src/ecs/queries/: error.rs  mod.rs  query.rs  query_parameters.rs
